# CHP_MPI_HEAT2D_DF

./: .gitignore  CMakeLists.txt  Makefile  README.md  exe  script_test_1.gnu
Rapport/: Projet.tex
latex/: paral.tex  plan.tex
libs/: lib.cmake
src/: listfunctions.h  main.cpp  matrix.cpp  matrix.h  outputinput.h  outputinput.h.autosave  solver.cpp  solver.h
src/CompExe/: CMakeLists.txt  main.cpp
src/Exemple_1/: CMakeLists.txt  listfunctions.cpp  listfunctions.h  main.cpp
src/Exemple_2/: CMakeLists.txt  listfunctions.cpp  listfunctions.h  main.cpp
src/Exemple_3/: CMakeLists.txt  listfunctions.cpp  listfunctions.h  main.cpp
src/Exemples_123/: CMakeLists.txt  listfunctions.cpp  listfunctions.h  main.cpp
src/HeatMPI/: CMakeLists.txt  heat_mpi.h
src/HeatMPI/Problem/: problem.cpp  problem.h
src/HeatMPI/ProcStruct/: procstruct.cpp  procstruct.h
src/HeatMPI/SecondMember/: secondmember.cpp  secondmember.h
src/HeatMPI/Solver/: solver.cpp  solver.h
src/HeatMPI/Tools/: datatype.h  operators.cpp  operators.h  outputinput.cpp  outputinput.h  tools.h
src_par/: listfunctions.cpp  listfunctions.h  main.cpp  operators.cpp  operators.h  secondmember.cpp  solver.h
src_seq/: listfunctions.cpp  listfunctions.h  main.cpp  matrix.cpp  matrix.h  operators.cpp  operators.h  outputinput.cpp  outputinput.h  secondmember.cpp  secondmember.h  solver.cpp  solver.h
