
file(GLOB_RECURSE HEATMPI_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE HEATMPI_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_library(
    HeatMPI
    SHARED
    ${HEATMPI_SOURCE_FILES}
    ${HEATMPI_HEADER_FILES}
    )

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set_target_properties(HeatMPI PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
set_target_properties(HeatMPI PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")

